# JK2VITA

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  THIRD_PARTY.md
cmake/: jk2_sources.cmake
sce_sys/livearea/contents/: template.xml
src/: OPENJK_PROVENANCE.txt  globals.cpp
src/code/Rufl/: hfile.cpp
src/code/client/: cl_cgame.cpp  cl_cin.cpp  cl_input.cpp  cl_keys.cpp  cl_main.cpp  cl_scrn.cpp  snd_dma.cpp  snd_local.h  snd_mem.cpp  snd_mix.cpp
src/code/game/: g_main.cpp  g_navigator.cpp  wp_saberLoad.cpp
src/code/mp3code/: towave.c
src/code/qcommon/: cm_load.cpp  common.cpp  files.cpp  ojk_saved_game.cpp  ojk_saved_game.h  qcommon.h  vita_jobpool.cpp  vita_jobpool.h  z_memman_pc.cpp
src/code/rd-common/: tr_image_jpg.cpp  tr_public.h  tr_types.h
src/code/rd-vanilla/: gl_vita_ext.cpp  gl_vita_ext.h  qgl.h  tr_WorldEffects.cpp  tr_backend.cpp  tr_bsp.cpp  tr_chunkinst.cpp  tr_cmds.cpp  tr_draw.cpp  tr_ghoul2.cpp  tr_image.cpp  tr_init.cpp  tr_light.cpp  tr_local.h  tr_main.cpp  tr_model.cpp  tr_scene.cpp  tr_shade.cpp  tr_shade_calc.cpp  tr_shader.cpp  tr_shadows.cpp  tr_subs.cpp  tr_surface.cpp  tr_surfacesprites.cpp  tr_world.cpp  tr_worldvbo.cpp
src/code/server/: sv_game.cpp  sv_init.cpp  sv_savegame.cpp
src/code/ui/: ui_main.cpp  ui_saber.cpp  ui_shared.cpp  ui_syscalls.cpp
src/codeJK2/cgame/: cg_effects.cpp
src/codeJK2/game/: NPC_spawn.cpp  Q3_Interface.cpp  g_cmds.cpp  g_local.h  g_main.cpp  g_navigator.cpp  g_roff.cpp  g_roff.h  g_savegame.cpp  g_weapon.cpp  wp_saber.h
src/compat/: endian.h
src/lib/minizip/: unzip.c
src/shared/qcommon/: q_platform.h
src/shared/sdl/: sdl_input.cpp  sdl_window.cpp
src/shared/sys/: sys_main.cpp  sys_public.h  sys_unix.cpp
src/vita/: companion_main.cpp
tools/: build.sh  env.local.sh  env.ps1  env.sh
